fix responsive on iPhone

--- a/tvision.css
+++ b/tvision.css
@@ -140,6 +140,12 @@ input, textarea {
   max-width: 100%;
   font-size: 12pt;
 }
+
+input {
+  padding: 1px 0 1px 0;
+  border-radius: 0;
+}
+
 input:disabled {
   background: #505070;
   color: #d0d0d0;
